[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
bb8 = "0.8.1"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.3.1", features = ["bb8", "postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
validator = { version = "0.16.1", features = ["derive"] }
