[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
bb8 = "0.8.1"
bcrypt = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.3.1", features = ["bb8", "postgres"] }
dotenv = "0.15.0"
hex = "0.4.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
ring = "0.16.20"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
